--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
   "fastapi>=0.116.1",
+  "fdb>=2.0.4",
   "motor>=3.7.1",
   "pacote>=0.3.0",
   "python-jose>=3.5.0",
