Adiçao de rotas

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,7 @@ dependencies = [
   "fastapi-limiter>=0.1.6",
   "fdb>=2.0.4",
   "motor>=3.7.1",
-  "psutil>=7.0.0",
-  "pyinstaller>=6.15.0",
+  "pdfplumber>=0.11.7",
   "pypdf2>=3.0.1",
   "python-jose>=3.5.0",
   "redis>=6.4.0",
