--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,10 @@ docker-compose.yml
 # Local e Sql
 src/local/*.py
 src/sql/*.sql
+src/songs/*.py
 !src/local/test.py
 !src/sql/test.sql
+!src/songs/test.mp3
 
 # VSCode / IDE configs
 .vscode/
