--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ dependencies = [
   "fastapi>=0.116.1",
   "fastapi-limiter>=0.1.6",
   "fdb>=2.0.4",
-  "motor>=3.7.1",
   "pdfplumber>=0.11.7",
+  "pymongo>=4.14.1",
   "pypdf2>=3.0.1",
   "python-jose>=3.5.0",
   "redis>=6.4.0",
